# seapodym-codebase

./: .clang-format  .gitignore  CMakeLists.txt  CONTRIBUTING.md  INSTALL.md  LICENSE.md  Makefile  Makefile.clt  Makefile.den  Makefile.eclt  Makefile.flx  Makefile.hab  Makefile.lclt  README.md  all.bat  dev.bat  my.bat  parfile.xml  template_parfile.xml
DOM/: Doxyfile
DOM/src/: XMLDocument.cpp  XMLDocument.h  XMLDocument2.cpp  XMLDocument2.h  testmain.cpp
docs/code-dox/: Doxyfile
docs/manual/: Seapodym_user_manual.tex
docs/manual/annexes/: appendices.aux  appendices.tex  fformats-annex.tex  inventory-annex.tex  technical-annex.tex  toolbox-annex.tex
docs/manual/chapter1/: Model.aux  Model.tex  parameters.tex  references.tex
example-configs/albacore/: albacore.xml  albacore_F0.xml  sim_F0.out
example-configs/early_life_stages/: albacore.xml
example-configs/habitat/: habitat.xml  habitat_input.xml  opt.out  sim.out
example-configs/skipjack/: opt.out  sim.out  sim_F0.out  skipjack-F0.xml  skipjack.xml  skipjack_F0.xml  skj-parfile-F0.xml
include/: Date.h  Map.h  Matrices.h  Numfunc.h  Param.h  ReadWrite.h  SaveTimeArea.h  SeapodymCoupled.h  SeapodymDocConsole.h  SimtunaFunc.h  Utilities.h  VarMatrices.h  VarParamCoupled.h  VarSimtunaFunc.h  XMLDocument.h  XMLDocument2.h  calpop.h  ctrace.h  mytypes.h
obsolete/: Makefile  Makefile.clt  Makefile.flx  SeapodymCoupled_SaveBeforeFishing.cpp  main_threaded.cpp  my.bat  seapodym_threaded.cpp
rtools/dym/: DESCRIPTION  NAMESPACE  README.txt
rtools/seamaps/: DESCRIPTION  NAMESPACE  README.txt
rtools/seamove/: DESCRIPTION  NAMESPACE  README.md
src/: CMakeLists.txt  Calpop_InitCalPop.cpp  Calpop_caldia.cpp  Calpop_calrec.cpp  Calpop_precaldia.cpp  Calpop_recompute.cpp  Calpop_recompute_coefs.cpp  Calpop_tridag.cpp  Date.cpp  Date.h  Dimensions.cpp  Dimensions.h  Map.cpp  Map.h  Matrices.cpp  Matrices.h  NishikawaCategories.cpp  NishikawaCategories.h  NishikawaLike.cpp  NishikawaLike.h  Numfunc.cpp  Numfunc.h  Param.h  ReadWrite.h  ReadWrite_DYM.cpp  ReadWrite_TXT.cpp  ReadWrite_fisheries.cpp  SaveSeapodymFileTxt.cpp  SaveTimeArea.cpp  SeapodymCoupled.h  SeapodymCoupled_EditRunCoupled.cpp  SeapodymCoupled_Forage.cpp  SeapodymCoupled_Funcs.cpp  SeapodymCoupled_OnCompFluxes.cpp  SeapodymCoupled_OnCompFluxes.cpp~  SeapodymCoupled_OnReadForcing.cpp  SeapodymCoupled_OnRunCoupled.cpp  SeapodymCoupled_OnRunFirstStep.cpp  SeapodymCoupled_OnWriteOutput.cpp  SeapodymCoupled_ReadTags.cpp  (+69 more)
src/class/: CMakeLists.txt  Date.cpp  Map.cpp  Matrices.cpp  Numfunc.cpp  SaveTimeArea.cpp  SimtunaFunc.cpp
src/class/CParam/: CMakeLists.txt  Param.cpp  dv_selectivity.cpp
src/class/CReadWrite/: CMakeLists.txt  ReadWrite_DYM.cpp  ReadWrite_TXT.cpp  ReadWrite_fisheries.cpp
src/class/Calpop/: CMakeLists.txt  Calpop_InitCalPop.cpp  Calpop_caldia.cpp  Calpop_calrec.cpp  Calpop_precaldia.cpp  Calpop_precalrec.cpp  Calpop_recompute_coefs.cpp  Calpop_tridag.cpp  caldia.cpp  calrec_adre.cpp  calrec_precalrec.cpp  precalrec_juv.cpp  predicted_catch.cpp  predicted_catch_without_effort.cpp  total_exploited_biomass.cpp  total_mortality_comp.cpp  total_obs_catch_age.cpp  tridag_bet.cpp
src/class/Calpop/adjoint/: dv_caldia.cpp  dv_calrec_adre.cpp  dv_calrec_precalrec.cpp  dv_precalrec_juv.cpp  dv_predicted_catch.cpp  dv_predicted_catch_without_effort.cpp  dv_total_exploited_biomass.cpp  dv_total_mortality_comp.cpp  dv_total_obs_catch_age.cpp  dv_tridag_bet.cpp
src/class/Calpop/forward/: fd_caldia.cpp  fd_calrec_adre.cpp  fd_calrec_precalrec.cpp  fd_precalrec_juv.cpp  fd_predicted_catch.cpp  fd_predicted_catch_without_effort.cpp  fd_total_exploited_biomass.cpp  fd_total_mortality_comp.cpp  fd_total_obs_catch_age.cpp  fd_tridag_bet.cpp
src/class/SeapodymCoupled/: CMakeLists.txt  SeapodymCoupled_EditRunCoupled.cpp  SeapodymCoupled_Forage.cpp  SeapodymCoupled_Funcs.cpp  SeapodymCoupled_OnCompFluxes.cpp  SeapodymCoupled_OnReadForcing.cpp  SeapodymCoupled_OnRunCoupled.cpp  SeapodymCoupled_OnRunFirstStep.cpp  SeapodymCoupled_OnWriteOutput.cpp  SeapodymCoupled_ReadTags.cpp  SeapodymDocConsole_UpdateDisplay.cpp  SeapodymHabitat_OnRunFirstStep.cpp  Seapodym_OnRunDensity.cpp  Seapodym_OnRunHabitat.cpp  food_requirement_index.cpp  like.cpp  spawning.cpp
src/class/SeapodymCoupled/adjoint/: dv_food_requirement_index.cpp  dv_spawning.cpp  dv_survival.cpp  dv_total_pop.cpp
src/class/SeapodymCoupled/forward/: fd_food_requirement_index.cpp  fd_spawning.cpp  fd_survival.cpp  fd_total_pop.cpp
src/class/VarParamCoupled/: CMakeLists.txt  VarParamCoupled.cpp  VarParamCoupled_reset.cpp  VarParamCoupled_xinit.cpp
src/class/VarSimtunaFunc/: CMakeLists.txt  accessibility.cpp  feeding_habitat.cpp  juvenile_habitat.cpp  mortality_sp.cpp  seasonal_switch.cpp  spawning_habitat.cpp
src/class/VarSimtunaFunc/adjoint/: dv_accessibility.cpp  dv_feeding_habitat.cpp  dv_juvenile_habitat.cpp  dv_mortality_sp.cpp  dv_seasonal_switch.cpp  dv_spawning_habitat.cpp
src/class/VarSimtunaFunc/forward/: fd_accessibility.cpp  fd_feeding_habitat.cpp  fd_juvenile_habitat.cpp  fd_mortality_sp.cpp  fd_seasonal_switch.cpp  fd_spawning_habitat.cpp
src/data/: SeapodymCoupled_OnReadForcing.cpp
src/models/control/: SeapodymCoupled_EditRunCoupled.cpp  SeapodymCoupled_Funcs.cpp  SeapodymCoupled_OnCompFluxes.cpp  SeapodymHabitat_OnRunFirstStep.cpp  Seapodym_OnRunDensity.cpp  Seapodym_OnRunHabitat.cpp  ad_buffers.cpp  hessian.cpp  main_densities.cpp  main_habitats.cpp  main_simulation.cpp  seapodym_coupled.cpp  seapodym_habitat.cpp  seapodym_threaded.cpp
src/models/functions/: dv_predicted_catch.cpp  dv_total_mortality_comp.cpp  dv_total_obs_catch_age.cpp  fd_feeding_habitat.cpp  fd_food_requirement_index.cpp  fd_predicted_catch.cpp  fd_predicted_catch_without_effort.cpp  fd_total_obs_catch_age.cpp  spawning_habitat.cpp
src/models/parameters/: VarParamCoupled.cpp  VarParamCoupled_xinit.cpp
src/models/solver/: Calpop_calrec.cpp  Calpop_precalrec.cpp  Map.cpp  calrec_precalrec.cpp  dv_calrec_precalrec.cpp  fd_precalrec_juv.cpp  fd_tridag_bet.cpp
src/utilities/: XMLDocument.cpp
(+291 files in other folders)
